src/objects/Event_Approval__c.object
<CustomObject>
    <description>The Conference Planning application provides an automated request, audit , approval, and
organization processes for Agency Conferences, Awards Ceremonies (with food), and Internal Management Meetings via the Salesforce cloud platform. This application is the required entry point for Event Coordinators, Finance, Contracting, Public Affairs, Procurement, and Leadership to coordinate requests submitted to the Office of Administrative Services; who will review and approve these requests, before an event can move forward.</description>
    <fields>
        <fullName>Approval_Step__c</fullName>
        <label>Approval Step</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Supervisor</fullName>
                </value>
                <value>
                    <fullName>HSSO</fullName>
                </value>
                <value>
                    <fullName>OAS</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conference_Site__c</fullName>
        <inlineHelpText>Enter the name of the site where the conference is being held. Include the country if international travel is required.</inlineHelpText>
        <label>Conference Venue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EA_Actual_GSA_Contractors__c</fullName>
        <description>Used on OAS Application for Event Approval object.  Required, will be on Conf Approval and awards ceremony layout.</description>
        <inlineHelpText>Please fill in &quot;0&quot; if no one of this type is attending</inlineHelpText>
        <label>Actual # GSA Contractors</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EA_Actual_Grants__c</fullName>
        <description>Used on OAS Application for Event Approval object. will be on Conf Approval layout..</description>
        <inlineHelpText>Please include all grants received.  If there were none, please enter a &quot;0&quot; in this field.</inlineHelpText>
        <label>Actual Grants</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EA_Actual_Non_GSA_Contractors__c</fullName>
        <description>Used on OAS Application for Event Approval object.  will be on Conf Approval and awards ceremony layout.</description>
        <inlineHelpText>Please fill in &quot;0&quot; if no one of this type is attending</inlineHelpText>
        <label>Actual # Non GSA Contractors</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EA_Actual_Non_GSA_Govt_Employees__c</fullName>
        <description>Used on OAS Application for Event Approval object.  will be on Conf Approval and awards ceremony layout</description>
        <inlineHelpText>Please fill in &quot;0&quot; if no one of this type is attending</inlineHelpText>
        <label>Actual # Non GSA Govt. Employees</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EA_Actual_Other_Attendees__c</fullName>
        <description>Used on OAS Application for Event Approval object.   will be on Conf Approval and awards ceremony layout.</description>
        <inlineHelpText>Please enter &quot;0&quot; if no-one of this type is attending</inlineHelpText>
        <label>Actual # Other Attendees</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EA_Actual_Other_Revenue__c</fullName>
        <inlineHelpText>Fill in actuals after the event has occurred.</inlineHelpText>
        <label>Actual Other Revenue</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EA_Actual_Registration_Fees_Collected__c</fullName>
        <description>Used on OAS Application for Event Approval object. will be on Conf Approval layout..</description>
        <inlineHelpText>Please place a &quot;0&quot; if there is no value.</inlineHelpText>
        <label>Actual Registration Fees Collected</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EA_Actual_Vendor_Fees__c</fullName>
        <description>Used on OAS Application for Event Approval object. will be on Conf Approval layout..</description>
        <inlineHelpText>Please include any Vendor Fees collected from a Vendor.  If there are no Vendor Fees, please place a &quot;0&quot; in this field.</inlineHelpText>
        <label>Actual Vendor Fees</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EA_Actual_of_GSA_Employees__c</fullName>
        <description>Used in the OAS application on the Event Approval object.  This will be a required field that resides on the Conference approval and Awards ceremony page layouts.</description>
        <inlineHelpText>Please fill in &quot;0&quot; if no one of this type is attending</inlineHelpText>
        <label>Actual # of GSA Employees</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EA_Alternate_Location_Considered__c</fullName>
        <description>Used on OAS Application for Event Approval object.  Required, will be on Conf Approval and awards ceremony layout</description>
        <inlineHelpText>Please supply the Name Address and Phone number of two alternate locations</inlineHelpText>
        <label>Alternate Location Considered</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>EA_Contract_Status__c</fullName>
        <description>Used in the Event Approval Application on the Conference Approval layout.</description>
        <inlineHelpText>If there is an existing contract attach a copy to this record.</inlineHelpText>
        <label>Contract Status</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>EA_Contracting_Vehicle_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Existing</fullName>
                </value>
                <value>
                    <fullName>Proposal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EA_Contracting_Vehicle_Type__c</fullName>
        <label>Contracting Vehicle Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Internal, No Contract</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Internal With Contract</fullName>
                </value>
                <value>
                    <fullName>External, Third Party</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EA_End_Date__c</fullName>
        <description>Used across all page layouts and record types for the Event Approval Application</description>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EA_Est_of_GSA_Attendees_That_Must_Travel__c</fullName>
        <description>For the Event Approval Object in the OAS application.  This field spans across all page layouts and record types and is required.</description>
        <inlineHelpText>Please fill in the Only the number of GSA participants that MUST travel</inlineHelpText>
        <label>Est. # of GSA Attendees That Must Travel</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EA_Estimated_GSA_Employees__c</fullName>
        <description>used in the OAS application for the Event Approval Object.  These will be required fields that will appear on the Conference and Awards page layouts.</description>
        <inlineHelpText>Helptext: Please fill in &quot;0&quot; if no one of this type is attending</inlineHelpText>
        <label>Estimated # GSA Employees</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EA_Estimated_GSA_contractors__c</fullName>
        <description>Used on OAS Application for Event Approval object.  Required, will be on Conf Approval and awards ceremony layout.</description>
        <inlineHelpText>Please fill in &quot;0&quot; if no one of this type is attending</inlineHelpText>
        <label>Estimated # GSA contractors</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EA_Estimated_Grants__c</fullName>
        <description>Used on OAS Application for Event Approval object. will be on Conf Approval layout..</description>
        <inlineHelpText>Please include any grants that you estimate that you will receive.  If there are none, please enter a &quot;0&quot; in this field.</inlineHelpText>
        <label>Estimated Grants</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EA_Estimated_Non_GSA_Contractors__c</fullName>
        <description>Used on OAS Application for Event Approval object.  Required, will be on Conf Approval and awards ceremony layout.</description>
        <label>Estimated # Non GSA Contractors</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EA_Estimated_Non_GSA_Govt_Employees__c</fullName>
        <description>Used on OAS Application for Event Approval object.  Required, will be on Conf Approval and awards ceremony layout</description>
        <inlineHelpText>Helptext: Please fill in &quot;0&quot; if no one of this type is attending</inlineHelpText>
        <label>Estimated # Non GSA Govt Employees</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EA_Estimated_Other_Revenue__c</fullName>
        <inlineHelpText>Place a &quot;0&quot; here if there is no amount for this field.</inlineHelpText>
        <label>Estimated Other Revenue</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EA_Estimated_Registration_Fees__c</fullName>
        <description>Used on OAS Application for Event Approval object. will be on Conf Approval layout.</description>
        <inlineHelpText>Input any Registration fees you estimate that you will collect.  If there are no registration fees, then please enter a &quot;0&quot; in this field.</inlineHelpText>
        <label>Estimated Registration Fees</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EA_Estimated_Total_Travel_Cost__c</fullName>
        <description>Used in the Event Approval application for the Travel Request to internal Meeting Layout</description>
        <label>Estimated Total Travel Cost</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EA_Estimated_VS_Actual__c</fullName>
        <description>Used on OAS Application for Event Approval object. will be on Conf Approval layout..</description>
        <formula>EA_Total_Estimated_Revenue__c  -  EA_Total_Actual_Revenue__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Estimated VS Actual</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EA_Estimated_Vendor_Fees__c</fullName>
        <description>Used on OAS Application for Event Approval object. will be on Conf Approval layout..</description>
        <inlineHelpText>Please include any fees that will be charged to a vendor if attending the conference.  If there are no Vendor Fees, please place a &quot;0&quot; in this field.</inlineHelpText>
        <label>Estimated Vendor Fees</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EA_Estimated_of_Other_Attendees__c</fullName>
        <description>Used on OAS Application for Event Approval object.  Required, will be on Conf Approval and awards ceremony layout.</description>
        <inlineHelpText>Please fill in &quot;0&quot; if no one of this type is attending</inlineHelpText>
        <label>Estimated # of Other Attendees</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EA_Event_Name__c</fullName>
        <description>For Event Approval Application this tracks Conference  name on the Conference Approval Page layout, The Ceremony Name on the Ceremony Layout, and the meeting name on the meeting layout.</description>
        <inlineHelpText>The Event Identifier is the Short Name of the event for example &quot;FOSE&quot;  
The Event Name is the Long name of the event for example &quot;Federal Office Systems Expo&quot;</inlineHelpText>
        <label>Event</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>EA_Event_POC_Email__c</fullName>
        <description>Used to Auto Populate the email of the Point of contact</description>
        <formula>EA_Event_Point_of_Contact__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Event POC Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EA_Event_Point_Of_Contact_Alternate_Phon__c</fullName>
        <description>Used in the OAS application for the Event Approval Object.  This field is NOT required but will span all three page layouts.</description>
        <label>Event Point Of Contact Alternate Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>EA_Event_Point_of_Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>For the Events Approval object in the OAS application.  This field will span all page layouts and record types and will be required.</description>
        <inlineHelpText>The Event Point of Contact may not be the same as the submitter.  There may be someone who has attended the event previously or that has more knowledge of the event.  That Person should be populated here.</inlineHelpText>
        <label>Event Point of Contact</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>The Point of Contact must be a GSA employee.</errorMessage>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>GSA</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Event Approvals</relationshipLabel>
        <relationshipName>Event_Approvals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EA_Expected_Performance_or_Outcome__c</fullName>
        <description>Used in the OAS application for the Event Approval object.  This field is required and spans all three page layouts.</description>
        <label>Expected Performance or Outcome</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EA_IF_FEDROOMS_Not_Used_Why__c</fullName>
        <inlineHelpText>Please explain reasons for not using FEDROOMS.</inlineHelpText>
        <label>If not used, why not? If Yes, put N/A.</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EA_IF_Travel_MIS_Not_Used_Why__c</fullName>
        <description>Used on OAS Application for Event Approval object.  Required, will be on Conf Approval and awards ceremony layout.</description>
        <inlineHelpText>Please explain reasons for not using Travel MIS.</inlineHelpText>
        <label>If not used, why not? If Yes, put N/A.</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EA_IF_Yes_Why__c</fullName>
        <description>Used in the Event Approval Application for the</description>
        <inlineHelpText>Describe why you feel this is the best value to GSA.</inlineHelpText>
        <label>IF Yes, Why?</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EA_If_No_Why__c</fullName>
        <inlineHelpText>If this is not the best value to GSA, describe why this location was chosen.</inlineHelpText>
        <label>If No, Why?</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EA_Justification_for_meeting__c</fullName>
        <description>Used in the Event Approval Application under the Travel Request for Internal management Meetings Page Layout</description>
        <inlineHelpText>Indicate how activity relates to the mission of GSA</inlineHelpText>
        <label>Justification for meeting</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EA_Office_Location__c</fullName>
        <formula>CreatedBy.City &amp; &quot;,&quot; &amp; CreatedBy.State</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Office Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EA_Percent_of_Estimated__c</fullName>
        <description>Used on the Event Approval Application for Conference Approval and Award Ceremonies with food</description>
        <formula>EA_Total_Actual_Expenses__c  /  EA_Total_Estimated_Expenses__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Percent of Estimated</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>EA_Proposed_Location_Justification__c</fullName>
        <description>Used on OAS Application for Event Approval object.  Required, will be on Conf Approval and awards ceremony layout</description>
        <inlineHelpText>Briefly Describe justification for proposed city/location.  You have 255 characters.</inlineHelpText>
        <label>Proposed Location Justification</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>EA_Proposed_Travel_Start_Date__c</fullName>
        <description>Used in the Event Approval Application under the Internal Management meeting request page layout.</description>
        <label>Proposed Travel Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EA_Purpose_or_Objective__c</fullName>
        <description>Used in the OAS application for the EA object.  This field is required and will Span All three page layouts.</description>
        <label>Purpose or Objective</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EA_Sponsoring_Office__c</fullName>
        <description>A common field used across all Page Layouts in the Events Approval Application that tracks the Sponsoring office of the Event.</description>
        <label>Sponsoring Office</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AA - Office of the Administrator</fullName>
                </value>
                <value>
                    <fullName>AK - Office of Civil Rights</fullName>
                </value>
                <value>
                    <fullName>B - Office of the Chief Financial Officer</fullName>
                </value>
                <value>
                    <fullName>C - Office of Human Resource Management</fullName>
                </value>
                <value>
                    <fullName>D - Office of Mission Assurance</fullName>
                </value>
                <value>
                    <fullName>E - Office of Small Business Utilization</fullName>
                </value>
                <value>
                    <fullName>G - Civilan Board of Contract Appeals</fullName>
                </value>
                <value>
                    <fullName>H - Office of Administrative Services</fullName>
                </value>
                <value>
                    <fullName>I - Office of the Chief Information Officer</fullName>
                </value>
                <value>
                    <fullName>J - Office of the Inspector General</fullName>
                </value>
                <value>
                    <fullName>L - Office of General Counsel</fullName>
                </value>
                <value>
                    <fullName>M - Office of Governmentwide Policy</fullName>
                </value>
                <value>
                    <fullName>O - Office of Customer Experience</fullName>
                </value>
                <value>
                    <fullName>P - Public Buildings Service</fullName>
                </value>
                <value>
                    <fullName>Q - Federal Acquisition Service</fullName>
                </value>
                <value>
                    <fullName>S - Office of Congressional &amp; Intergovernmental Affairs</fullName>
                </value>
                <value>
                    <fullName>Z - Office of Strategic Communication</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EA_Stage__c</fullName>
        <description>Used in the OAS application on the Event Approval object.  This is not a required field and will be used for time based workflow and for moving through approval process.</description>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Waiting for Actuals</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Recalled</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EA_Start_Date__c</fullName>
        <description>used for across all layouts and record types for the Event Approval Application</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EA_Target_Audience__c</fullName>
        <description>Used in the OAS application for the Event Approval object.  It will be used on the Conference approval and the awards ceremony page layout.  This is a required field for both layouts.</description>
        <label>Target Audience</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EA_Total_Actual_Expenses__c</fullName>
        <description>For the Event Approval Application.  Calculates the total Acutal Expenses after they have been entered by the user</description>
        <label>Total Actual Expenses</label>
        <summarizedField>Event_Expenses__c.EA_Total_Actual_Amount__c</summarizedField>
        <summaryForeignKey>Event_Expenses__c.Event_Identifier__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>EA_Total_Actual_Participants__c</fullName>
        <description>Used on OAS Application for Event Approval object.  Required, will be on Conf Approval and awards ceremony layout</description>
        <formula>EA_Actual_GSA_Contractors__c  +  EA_Actual_Non_GSA_Contractors__c  +  EA_Actual_Non_GSA_Govt_Employees__c  +  EA_Actual_of_GSA_Employees__c  +  EA_Actual_Other_Attendees__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Actual Participants</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EA_Total_Actual_Revenue__c</fullName>
        <description>Used on OAS Application for Event Approval object. will be on Conf Approval layout..</description>
        <formula>EA_Actual_Registration_Fees_Collected__c  +  EA_Actual_Grants__c  +  EA_Actual_Vendor_Fees__c +  EA_Actual_Other_Revenue__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Actual Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EA_Total_Estimated_Expenses__c</fullName>
        <description>For the Event approval app.  Sums up all estimated expenses related to an event.</description>
        <label>Total Estimated Expenses</label>
        <summarizedField>Event_Expenses__c.EA_Total_Estimated_Amount__c</summarizedField>
        <summaryForeignKey>Event_Expenses__c.Event_Identifier__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>EA_Total_Estimated_Participants__c</fullName>
        <description>Used on OAS Application for Event Approval object.  Required, will be on Conf Approval and awards ceremony layout</description>
        <formula>EA_Estimated_GSA_contractors__c  +  EA_Estimated_GSA_Employees__c  +  EA_Estimated_Non_GSA_Contractors__c  +  EA_Estimated_Non_GSA_Govt_Employees__c  +  EA_Estimated_of_Other_Attendees__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Estimated Participants</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EA_Total_Estimated_Revenue__c</fullName>
        <formula>EA_Estimated_Registration_Fees__c  +  EA_Estimated_Grants__c  +  EA_Estimated_Vendor_Fees__c +  EA_Estimated_Other_Revenue__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Estimated Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EA_Travel_MIS_used__c</fullName>
        <description>Used on OAS Application for Event Approval object.  Required, will be on Conf Approval and awards ceremony layout.</description>
        <label>Was Travel MIS used to pick event site?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Estimated_Other_Participants__c</fullName>
        <label>Estimated Other Participants</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Estimated_Participants__c</fullName>
        <description>Used in the Event Approval Application only for the Internal Management meeting page layout.  There is no logic behind this field.</description>
        <label>Estimated # GSA Employees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Event_Canceled__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If your conference or event has been cancelled, please check this box.</inlineHelpText>
        <label>Event Canceled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Event_Disclaimer__c</fullName>
        <defaultValue>&quot;ALERT: PLEASE ENSURE THAT THE REQUESTED EVENT DOES NOT ALREADY EXIST IN EVENT TRACKER. Search for the event, including any possible variations in naming convention or abbreviation, to ensure it does not already exist in the application before creating a new event.&quot;</defaultValue>
        <label>Disclaimer</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Event_POC_Phone__c</fullName>
        <description>used in the Event Approval Application</description>
        <formula>EA_Event_Point_of_Contact__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Event POC Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Type_Hidden__c</fullName>
        <label>Event Status Hidden</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSSO__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Who is my HSSO approver? 
See GSA HSSO Approver Listing at https://insite.gsa.gov/portal/content/669402</inlineHelpText>
        <label>HSSO</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Event_Approvals1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Is_this_Best_Value__c</fullName>
        <description>Used on OAS Application for Event Approval object.  Required, will be on Conf Approval and awards ceremony layout.</description>
        <inlineHelpText>Does the proposed site (Location and Venue) Represent the best value to the Government, cost and all relevant factors considered?</inlineHelpText>
        <label>Is this Best Value</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Link_to_HSSO_Approver_List_page__c</fullName>
        <defaultValue>&quot;https://insite.gsa.gov/portal/content/669402&quot;</defaultValue>
        <label>Link to HSSO Approver List page</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Other_State_Reason__c</fullName>
        <inlineHelpText>Please provide an 80 character or less description of why &quot;Other&quot; was chosen for the State.</inlineHelpText>
        <label>Other State Reason</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Proposed_Travel_End_Date__c</fullName>
        <description>Used in the Event Approval Application for the Internal Management meeting only.</description>
        <label>Proposed Travel End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <inlineHelpText>Please select the region for the requesting event</inlineHelpText>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Region 1</fullName>
                </value>
                <value>
                    <fullName>Region 2</fullName>
                </value>
                <value>
                    <fullName>Region 3</fullName>
                </value>
                <value>
                    <fullName>Region 4</fullName>
                </value>
                <value>
                    <fullName>Region 5</fullName>
                </value>
                <value>
                    <fullName>Region 6</fullName>
                </value>
                <value>
                    <fullName>Region 7</fullName>
                </value>
                <value>
                    <fullName>Region 8</fullName>
                </value>
                <value>
                    <fullName>Region 9</fullName>
                </value>
                <value>
                    <fullName>Region 10</fullName>
                </value>
                <value>
                    <fullName>Region 11</fullName>
                </value>
                <value>
                    <fullName>Central Office</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>